--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "polymorphic-ember-data",
+  "name": "chapter14",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for polymorphic-ember-data goes here",
+  "description": "Small description for chapter14 goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -20,6 +20,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
@@ -32,9 +33,11 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^5.1.2",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-mirage": "^1.1.7",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-surge": "^1.4.4",
     "ember-cli-uglify": "^3.0.0",
-    "ember-data": "~3.19.0",
+    "ember-data": "~3.20.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
     "ember-load-initializers": "^2.1.1",
